Add Ephemery Testnet configs and genesis state file
Signed-off-by: gconnect <agatevureglory@gmail.com>